Fix bug on aria label for Align Center.

--- a/resources/assets/styles/gutenburg/_acf-wysiwig.scss
+++ b/resources/assets/styles/gutenburg/_acf-wysiwig.scss
@@ -9,7 +9,7 @@
       &.mce-btn[aria-label="Blockquote (⌃⌥Q)"],
       &.mce-btn[aria-label="Strikethrough (⌃⌥D)"],
       &.mce-btn[aria-label="Align left (⌃⌥L)"],
-      &.mce-btn[aria-label="Align center (⌃⌥C"],
+      &.mce-btn[aria-label="Align center (⌃⌥C)"],
       &.mce-btn[aria-label="Align right (⌃⌥R)"],
       &.mce-btn[aria-label="Undo (⌘Z)"],
       &.mce-btn[aria-label="Redo (⌘Y)"],
